[project]
name = "vtuber-live-backend"
version = "1.0.0"
description = "VTuber Live Aggregator Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.40",
    "pydantic>=2.10.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
]