[project]
name = "vtuber-live-backend"
version = "1.0.0"
description = "VTuber Live Aggregator Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.40",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.4",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
]
